"added table and form improvements"

--- a/app/views/readings/new.html.erb
+++ b/app/views/readings/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Enter Your Reading</h1>
+<h1>Add a new Reading</h1>
 
 
 <%= form_for (@reading) do |r| %>
@@ -10,9 +10,11 @@
   </div>
   <div>
 
+
+
   </div>
 
-<p> Enter your Blood Pressure Reading</p>
+<h3>Enter your Blood Pressure Here:</h3>
 
     <div>
     <%= r.label :systolic %><br />
